--- a/domino/domino.html
+++ b/domino/domino.html
@@ -1,8 +1,13 @@
 <!DOCTYPE HTML>
-
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<title>domino</title>
+	<style>
+	    body {
+	        background-color: #FFE;
+	    }
+	</style>
 	<script type="text/javascript" src="../closure/closure/goog/base.js"></script>
 	<script type="text/javascript" src="domino.js"></script>
 </head>
